--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -3,8 +3,14 @@
 
 
 <h1>New Bookmark</h1>
-<%= simple_form_for  [@bookmark, @lists] do |f| %>
-  <%= f.input :comment %>
-  <%= f.input :@lists.movie %>
-  <%= f.submit "Submit bookmark", class: "btn btn-primary" %>
-<% end %>
+
+<div class="container">
+    <h1 class="text-center">Add a new tag</h1>
+
+    <%= simple_form_for [@list, @bookmark] do |f| %>
+        <%= f.input :comment %>
+        <%= f.association :movie, collection: Movie.all %>
+        <%= f.submit "Submit bookmark", class: "btn btn-primary" %>
+    <% end %>
+
+</div>
