--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,4 +1,11 @@
-<div>Save any kind movies</div>
+<div class="container">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(../../images/);">
+  <div class="container">
+    <h1>Save any kind movies</h1>
+  </div>
+</div>
+
+<div></div>
 
 <h1>My List</h1>
 
@@ -9,5 +16,4 @@
 </ul>
 
 <%= link_to "Create a new List", new_list_path %>
-
-
+</div>
