--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,11 +1,14 @@
 <div class="container">
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(../../images/);">
+
+    <%= cl_image_tag "j4emzmibrqppcehc7rpd", alt:"boris", width: 400, height: 300, crop: :fill %>
+
+
   <div class="container">
     <h1>Save any kind movies</h1>
   </div>
-</div>
 
-<div></div>
+
+</div>
 
 <h1>My List</h1>
 
