--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,15 +1,13 @@
-<h1>Bookmarks#new</h1>
+<div class="container mt-5">
+  <h1>My new <strong>Bookmark<strong></h1>
 
+  <div class="container mt-5">
+      <%= simple_form_for [@list, @bookmark] do |f| %>
+          <%= f.input :comment %>
+          <%= f.input :photo, as: :file %>
+          <%= f.association :movie, collection: Movie.all %>
+          <%= f.submit "Submit bookmark", class: "btn btn-primary" %>
+      <% end %>
 
-
-<h1>New Bookmark</h1>
-
-<div class="container">
-    <%= simple_form_for [@list, @bookmark] do |f| %>
-        <%= f.input :comment %>
-        <%= f.input :photo, as: :file %>
-        <%= f.association :movie, collection: Movie.all %>
-        <%= f.submit "Submit bookmark", class: "btn btn-primary" %>
-    <% end %>
-
+  </div>
 </div>
